<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eec750" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <EditText
            android:id="@+id/user_name"
            style="@style/user_entry_edit_style"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corner_ed"
            android:ems="10"
            android:hint="@string/login_screen_user_name"
            android:inputType="textPersonName" >
        </EditText>

        <EditText
            android:id="@+id/user_password"
            style="@style/user_entry_edit_style"
            android:layout_below="@+id/user_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner_ed"
            android:ems="10"
            android:hint="@string/login_screen_user_password"
            android:inputType="textPassword" >
        </EditText>

        <Button
            android:id="@+id/submit_btn"
            style="@style/submit_button"
            android:layout_below="@+id/user_password"
            android:layout_centerHorizontal="true"
            android:text="@string/login_screen_submit" />

    </RelativeLayout>

</RelativeLayout>